--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "module": "commonjs",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitOverride": true,
@@ -19,6 +20,7 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "dist",
     "preserveSymlinks": true,
     "skipLibCheck": true,
     "strict": true,
@@ -26,7 +28,8 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "es2016",
+    "target": "ESNext",
     "useUnknownInCatchVariables": true
-  }
+  },
+  "include": ["src/**/*", "scripts/**/*"]
 }
