--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,8 @@
     "target": "ESNext",
     "useUnknownInCatchVariables": true
   },
-  "include": ["src/**/*", "scripts/**/*"]
+  "include": ["src/**/*", "scripts/**/*"],
+  "ts-node": {
+    "transpileOnly": true
+  }
 }
