--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "shiki": "^1.2.0",
     "which": "^4.0.0",
     "zod": "^3.22.4"
+  },
+  "volta": {
+    "node": "20.14.0",
+    "npm": "10.8.1"
   }
 }
