--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "node --loader ts-node/esm --no-warnings scripts/build.ts",
-    "clean": "rm -rf $HOME/.cache/puppeteer > /dev/null 2>&1",
+    "clean": "rm -rf $HOME/.cache/puppeteer/* > /dev/null 2>&1",
     "debug": "node --loader ts-node/esm --no-warnings",
     "format": "prettier -w .",
     "install": "node bin/install.cjs",
